# Application/DTOs/CategoriaDTO.cs
@@ -13,6 +13,6 @@ namespace Application.DTOs
 
         public string Nombre { get; set; } = null!;
 
-        public virtual ICollection<ProductoEntity> Productos { get; set; } = new List<ProductoEntity>();
+        public virtual ICollection<ProductoDTO> Productos { get; set; } = new List<ProductoDTO>();
     }
 }
